instance1/temp-retrieve/objects/Promotions__c/fields/Genetic_Testing_Promotion_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Testing_Promotion_Lookup__c</fullName>
    <formula>IF(INCLUDES(Promotion_For__c, &quot;Genetic Testing&quot;),TRUE,False)</formula>
    <label>Genetic Testing Promotion Lookup</label>
    <type>Checkbox</type>
</CustomField>