instance1/temp-retrieve/objects/Promotions__c/fields/Initial_HRT_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Initial_HRT_Lookup__c</fullName>
    <formula>IF(INCLUDES(Promotion_For__c, &quot;Initial HRT&quot;),TRUE,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial HRT Lookup</label>
    <type>Checkbox</type>
</CustomField>