instance1/temp-retrieve/objects/Promotions__c/fields/Medical_Consultation_Promotion_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Medical_Consultation_Promotion_Lookup__c</fullName>
    <formula>IF(INCLUDES(Promotion_For__c, &quot;Medical Consultation&quot;),TRUE,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Consultation Promotion Lookup</label>
    <type>Checkbox</type>
</CustomField>