instance1/temp-retrieve/objects/Promotions__c/fields/Promotion_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotion End Date</label>
    <type>Date</type>
</CustomField>