instance1/temp-retrieve/objects/Promotions__c/fields/Promotion_For__c.field-meta.xml
<CustomField>
    <fullName>Promotion_For__c</fullName>
    <label>Promotion For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hormone Evaluation</fullName>
            </value>
            <value>
                <fullName>Sexual Wellness</fullName>
            </value>
            <value>
                <fullName>Aesthetics</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Medical Consultation</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Initial HRT</fullName>
            </value>
            <value>
                <fullName>Genetic Testing</fullName>
            </value>
            <value>
                <fullName>In Office Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>