instance1/temp-retrieve/objects/Promotions__c/fields/Promotion_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotion Start Date</label>
    <type>Date</type>
</CustomField>