instance1/temp-retrieve/objects/Promotions__c/fields/Promotion_Status__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Status__c</fullName>
    <label>Promotion Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Waiting For Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>