instance1/temp-retrieve/objects/Promotions__c/fields/Promotion_Used_In__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Used_In__c</fullName>
    <label>Promotion Used In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>News Letter</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Printed Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>