instance1/temp-retrieve/objects/Promotions__c/fields/Sexual_Wellness_Promotion_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Wellness_Promotion_Lookup__c</fullName>
    <formula>IF(INCLUDES(Promotion_For__c, &quot;Sexual Wellness&quot;),TRUE,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sexual Wellness Promotion Lookup</label>
    <type>Checkbox</type>
</CustomField>