instance1/temp-retrieve/objects/Promotions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Promotion_Status__c</columns>
    <columns>Promotion_For__c</columns>
    <columns>Promotion_Amount__c</columns>
    <columns>Promotion_Start_Date__c</columns>
    <columns>Promotion_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>