instance1/temp-retrieve/objects/Promotions__c/listViews/Inactive_and_Waiting_for_Approval_Promos.listView-meta.xml
<ListView>
    <fullName>Inactive_and_Waiting_for_Approval_Promos</fullName>
    <columns>NAME</columns>
    <columns>Promotion_Status__c</columns>
    <columns>Promotion_For__c</columns>
    <columns>Promotion_Amount__c</columns>
    <columns>Promotion_Start_Date__c</columns>
    <columns>Promotion_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promotion_Status__c</field>
        <operation>equals</operation>
        <value>Inactive,Waiting For Approval</value>
    </filters>
    <label>Inactive and Waiting for Approval Promos</label>
</ListView>